--- a/src/components/styles/Homepage.css
+++ b/src/components/styles/Homepage.css
@@ -1,16 +1,49 @@
 .background {
+    z-index: -1;
+    line-height: 0;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .background img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 .middle-center {
-    position: absolute;
+    text-align: center;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
+}
+
+.middle-center .description {
+    margin: 0 20vw;
+    font-family:  sans-serif;
+    font-weight: normal;
+}
+
+.middle-center .button {
+    line-height: 0;
+    margin: 1rem;
+    padding: 1.2rem;
+    border: solid 1px black;
+    background: black;
+    box-shadow: 5px 5px 5px black;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
 }
