--- a/src/components/styles/Homepage.css
+++ b/src/components/styles/Homepage.css
@@ -21,17 +21,18 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-content: center;
 
-    
-    width: 100vw;
+    margin: 0 auto;
+    width: 80vw;
+    min-width: 20rem;
     height: 100vh;
     z-index: 1;
 }
 
 .middle-center .description {
-    margin: 0 20vw;
+
     font-family:  sans-serif;
     font-weight: normal;
 }
