--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap');
 
 header {
-    position: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 5vh;
     width: 100vw;
     background: white;
