--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -8,15 +8,15 @@
 }
 
 .main-shop .products {
-    border: solid 5px black;
     flex: 3;
+    overflow: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .main-shop .shop-sidebar {
     flex: 1;
     min-width: 10rem;
     max-width: 20rem;
-    border: solid 5px black;
-    background-color: #b8c6db;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+    border: solid rgb(212, 212, 212) 1px;
 }
