--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -10,8 +10,50 @@
 .main-shop .products {
     flex: 3;
     overflow: auto;
+
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 1rem;
+}
+
+.products .product {
+    margin-top: 1rem;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    transition: box-shadow 200ms, transform 200ms;
+
+    text-decoration: none;
+    height: 20rem;
+    width: 20rem;
+}
+
+.products .product img {
+    width: 100%; 
+    height: 80%;
+    object-fit: scale-down;
+}
+
+.products .product .information {
+    width: 100%;
+    height: 20%;
+
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+
+    color: black;
+
+    font-family: Helvetica, sans-serif;
+}
+
+.product .information .price-wrapper {
+    display: flex;
+    gap: 5px;
+}
+
+.products .product:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.247);
 }
 
 .main-shop .shop-sidebar {
