--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -7,6 +7,10 @@
     width: 100vw;
 }
 
+.products .empty {
+    font-family: Montserrat, sans-serif;
+}
+
 .main-shop .products {
     flex: 3;
     overflow: auto;
@@ -34,16 +38,71 @@
 }
 
 .products .product .information {
-    width: 100%;
     height: 20%;
 
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-right: 10px;
 
     color: black;
 
-    font-family: Helvetica, sans-serif;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+}
+
+.products .product .scroll-wrapper {
+    position: relative;
+    width: 80%;
+}
+
+
+.scroll-wrapper .name {
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 0 10px;
+}
+
+@keyframes slide {
+    /* The trick is that translate's percentages are corresponding to the current element and left referrs to the parent. */
+    0%,
+    20% {
+      transform: translateX(0%);
+      left: 0%;
+    }
+    80%,
+    100% {
+      transform: translateX(-100%);
+      left: 100%;
+    }
+}
+
+.scroll-wrapper .name span.animate {
+    display: inline-block;
+    position: relative;
+    animation: 3s ease-in-out 0ms infinite alternate none running slide;
+}
+
+.scroll-wrapper .name::before {
+    z-index: 1;
+    top: 0;
+    left: 0;
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+}
+
+.scroll-wrapper .name::after {
+    z-index: 1;
+    top: 0;
+    right: 0;
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
 }
 
 .product .information .price-wrapper {
