--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -43,6 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    line-height: 1; /* keeps text of name and price on the same height, noticeable when hovering a product, which has an animated title */
     margin-right: 10px;
 
     color: black;
