--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -121,7 +121,54 @@
 
 .main-shop .shop-sidebar {
     flex: 1;
-    min-width: 10rem;
+    min-width: max-content;
     max-width: 20rem;
     border: solid rgb(212, 212, 212) 1px;
+}
+
+.shop-sidebar .section {
+    margin: 0.35rem;
+    font-family: Montserrat, sans-serif;
+    font-size: 2rem;
+}
+
+input[type="checkbox"] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+}
+
+input[type="checkbox"]:not(:checked) + .new-checkbox-design .activated{
+    opacity: 0;
+}
+
+.filter-input {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.filter-input .new-checkbox-design {
+    pointer-events: none;
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    border: solid 1px black;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filter-input .new-checkbox-design .activated {
+    transition: opacity 200ms;
+    background: black;
+
+    width: 50%;
+    height: 50%;
 }
