--- a/src/components/styles/ShopPage.css
+++ b/src/components/styles/ShopPage.css
@@ -123,7 +123,7 @@
     flex: 1;
     min-width: max-content;
     max-width: 20rem;
-    border: solid rgb(212, 212, 212) 1px;
+    border-right: solid rgb(212, 212, 212) 1px;
 }
 
 .shop-sidebar .section {
