--- a/src/components/styles/Homepage.css
+++ b/src/components/styles/Homepage.css
@@ -31,6 +31,10 @@
     z-index: 1;
 }
 
+.middle-center .title {
+    color: orange;
+}
+
 .middle-center .description {
     font-family:  sans-serif;
     font-weight: normal;
