--- a/src/components/styles/ProductOverview.css
+++ b/src/components/styles/ProductOverview.css
@@ -4,8 +4,62 @@
     height: 100%;
 }
 
-.product-overview .navigate-back {
+.all-images {
+    display: none;
+}
+
+.product-overview .navigate-back img {
     position: absolute;
+    height: 5rem;
+    width: 5rem;
     top: 0;
     left: 0;
+}
+
+.image-slider {
+    height: 20rem;
+    width: 20rem;
+}
+
+.image-slider .main {
+    display: flex;
+    align-items: center;
+}
+
+.main .images {
+    width: 90%;
+    height: 100%;
+}
+
+.main .images img {
+    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
+}
+
+.product-overview .main-content {
+    margin-top: 5rem;
+}
+
+.slider {
+    cursor: pointer;
+}
+
+.slider img {
+    width: 100%;
+    height: 100%;
+}
+
+.slider.right,
+.slider.left {
+    width: 10%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider.right img {
+    transform: rotate(180deg);
 }
