--- a/src/components/styles/ProductOverview.css
+++ b/src/components/styles/ProductOverview.css
@@ -115,3 +115,34 @@
 
     aspect-ratio: 1 / 1;
 }
+
+.not-found {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 0;
+}
+
+.not-found .wrapper div {
+    font-size: 10rem;
+    line-height: 10rem;
+
+    animation: rotate 2s linear infinite;
+}
+
+
+@keyframes rotate {
+    from {
+        transform: rotate(0);
+    } to {
+        transform: rotate(360deg);
+    }
+}
