--- a/src/components/styles/ProductOverview.css
+++ b/src/components/styles/ProductOverview.css
@@ -76,6 +76,8 @@
     font-family: Montserrat, sans-serif;
     font-weight: bold;
     font-size: 2rem;
+
+    margin-right: 2rem;
 }
 
 .main-content .text-section .name {
@@ -166,4 +168,44 @@
     } to {
         transform: rotate(360deg);
     }
+}
+
+.add {
+    height: 3rem;
+    width: 100%;
+    align-self: center;
+    position: relative;
+
+    box-sizing: border-box;
+}
+
+.add button {
+    cursor: pointer;
+    margin: 0 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    width: 60%;
+    height: 100%;
+    z-index: 1;
+
+    /* reset default button style */
+    border: none;
+    background: none;
+    padding: 0 1rem;
+}
+
+.add .fake-button {
+    border: solid 5px black;
+    color: white;
+    z-index: -1;
+    margin: 0 auto;
+    
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 1rem;
+
+    background: rgb(50, 205, 102);
+    width: 50%;
+    height: 100%;
 }
