--- a/src/components/styles/ProductOverview.css
+++ b/src/components/styles/ProductOverview.css
@@ -72,6 +72,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    max-width: 50%;
 
     font-family: Montserrat, sans-serif;
     font-weight: bold;
@@ -85,6 +86,7 @@
 }
 
 .main-content .text-section .price {
+    margin-right: 10px;
     margin-left: auto;
     width: max-content;
 }
@@ -211,4 +213,8 @@
     background: rgb(50, 205, 102);
     width: 70%;
     height: 100%;
+}
+
+.title-price .scroll-wrapper {
+    width: 100%;
 }
